k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hodor
  name: hodor
  namespace: fampay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hodor
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: hodor
    spec:
      imagePullSecrets:
      - name: docker
      containers:
      - image: pragadeesh196/hodor-actions:68e97fbb29e33cdecb3ae1d4f7dc4d165fb5cd65
        name: hodr1
        ports:
        - containerPort: 8081
        resources:
          requests:
           cpu: "10m"
          limits:
           cpu: "50m"
status: {}

---

apiVersion: v1
kind: Service
metadata:
  name: hodor-hpa-service
  namespace: fampay
  labels:
    app: hodor
spec:
  ports:
  - port: 8081
  selector:
    app: hodor
