k8s/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-bran-to-hodor
  namespace: fampay
spec:
  podSelector:
    matchLabels:
      app: bran
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: hodor
